# QtGraph

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-portable.yml
docs/: windows-portable.md
resources/: app.qrc
resources/fonts/: README.md
scripts/windows/: deploy-portable.ps1
settings/: README.md
settings/defaults/: default-settings.json
src/: main.cpp
src/app/: appcontext.cpp  appcontext.h
src/core/: filemanager.cpp  filemanager.h
src/core/config/: jsonconfigstore.cpp  jsonconfigstore.h
src/core/fonts/: fontmanager.cpp  fontmanager.h  fontprovider.cpp  fontprovider.h
src/core/utils/: fileio.cpp  fileio.h  pathutils.cpp  pathutils.h
src/editor/syntax/: highlighterfactory.cpp  highlighterfactory.h  highlighterregistry.cpp  highlighterregistry.h
src/editor/syntax/base/: syntaxhighlighter.cpp  syntaxhighlighter.h
src/editor/syntax/languages/cpp/: cpphighlighter.cpp  cpphighlighter.h
src/editor/syntax/languages/css/: csshighlighter.cpp  csshighlighter.h
src/editor/syntax/languages/html/: htmlhighlighter.cpp  htmlhighlighter.h
src/editor/syntax/languages/java/: javahighlighter.cpp  javahighlighter.h
src/editor/syntax/languages/javascript/: jshighlighter.cpp  jshighlighter.h
src/editor/syntax/languages/json/: jsonhighlighter.cpp  jsonhighlighter.h
src/editor/syntax/languages/python/: pythonhighlighter.cpp  pythonhighlighter.h
src/editor/syntax/languages/typescript/: tshighlighter.cpp  tshighlighter.h
src/editor/view/: codeviewer.cpp  codeviewer.h
src/interfaces/: iconfigstore.h  ifileio.h  ifontprovider.h  ihighlighterfactory.h  iplugin.h
src/models/: appsettings.h  fileclipboard.h  openfileresult.h  plugininfo.h
src/plugins/sdk/: pluginsdk.h
src/services/: editorservice.cpp  editorservice.h  fileservice.cpp  fileservice.h  pluginmanager.cpp  pluginmanager.h  projectservice.cpp  projectservice.h  settingsservice.cpp  settingsservice.h
src/settings/: settingsmanager.cpp  settingsmanager.h  settingstab.cpp  settingstab.h
src/ui/canvas/: canvasview.cpp  canvasview.h
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/settings/: settingstab.cpp  settingstab.h
src/ui/tabs/: tabmanager.cpp  tabmanager.h
src/ui/tree/: projecttreeview.cpp  projecttreeview.h
src/ui/welcome/: welcometab.cpp  welcometab.h
